<resources>
    <string name="app_name">Day Day Weather</string>
    <string name="add">Add</string>
    <string name="please_add_a_place">please add a place</string>
    <string name="Humidity">humidity</string>
    <string name="Pressure">Pressure</string>
    <string name="Cloudy">Cloudy</string>
    <string name="language">en</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="visibility">visibility</string>
    <string name="TimeAndDat">Date</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string-array name ="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>